# pokesim

./: Cargo.toml  LICENSE  README.md
data/: README.md
src/: lib.rs
src/game/: data.rs  mod.rs  monster.rs  moves.rs  pokedex.rs
