[package]
name = "pokesim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pokesim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8", features = ["v4"]}
rand = "0.8.5"
serde = "1.0.137"
serde_json = "1.0"
lazy_static = "1.4.0"
